--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portofolio",
+  "homepage": "https://Sarath-aug-01.github.io/DigitalStudio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,12 +22,16 @@
     "ag-grid-enterprise": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "axios": "^1.1.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.4.2",
@@ -43,6 +48,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
